[gd_scene load_steps=2 format=3 uid="uid://d8r0pxl6rsb2"]

[ext_resource type="Script" uid="uid://cujl14solywlu" path="res://Scenes/game_over.gd" id="1_ojehl"]

[node name="Game_Over" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ojehl")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -73.0
offset_top = -55.0
offset_right = 1215.0
offset_bottom = 716.0
color = Color(0.54509807, 0.54509807, 0.54509807, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -203.0
offset_top = 247.0
offset_right = 204.0
offset_bottom = 350.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 75
text = "Game Over"

[node name="Restart" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -91.0
offset_top = 52.0
offset_right = 92.0
offset_bottom = 129.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Restart
"

[node name="back" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -174.0
offset_top = 137.0
offset_right = 175.0
offset_bottom = 214.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Back to Levels"

[node name="quit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = 222.0
offset_right = 57.0
offset_bottom = 299.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Quit
"

[connection signal="pressed" from="Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
