extends Control


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass


func _on_restart_pressed() -> void:
	if GameManager.current_level_path != "":
		get_tree().change_scene_to_file(GameManager.current_level_path)


func _on_back_pressed() -> void:
	get_tree().change_scene_to_file("res://Scenes/levels_screen.tscn")


func _on_quit_pressed() -> void:
	get_tree().quit()
